discarding some changes Git decided to make